--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9999
 
-spring.cloud.config.server.git.uri=
+spring.cloud.config.server.git.uri=https://github.com/m-braatz/inertia-cloud-config-0.0.1.git
